[FEAT] publish to jitpack

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-android.disableAutomaticComponentCreation=true
+
+org.gradle.warning.mode=all
 kotlin.mpp.androidSourceSetLayoutVersion=2
-# org.gradle.warning.mode=all
+android.disableAutomaticComponentCreation=true
